objects/redwing__Learning_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Is_Certification_Plan__c</fullName>
        <formula>redwing__Training_Plan__r.Is_Certification_Plan__c</formula>
        <label>Is Certification Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ltrpt__Account_Location__c</fullName>
        <formula>redwing__Contact__r.Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltrpt__Account_Name__c</fullName>
        <formula>redwing__Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ltrpt__Is_Completed__c</fullName>
        <formula>TEXT(redwing__Progress__c) =  $Label.redwing__alms_completed</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Approver_Notes__c</fullName>
        <label>Approver Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Assignment_Time_Limit__c</fullName>
        <inlineHelpText>Number of minutes to complete the evaluation</inlineHelpText>
        <label>Assignment Time Limit (mins)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__CheckIn_Latitude__c</fullName>
        <label>Check-In Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__CheckIn_Longitude__c</fullName>
        <label>Check-In Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Completed_On__c</fullName>
        <inlineHelpText>Date this assignment was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Due_Date__c</fullName>
        <inlineHelpText>Due Date for assignments to be completed</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Result_Text__c</fullName>
        <formula>TEXT( redwing__Evaluation_Result__c )</formula>
        <label>Evaluation Result Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Result__c</fullName>
        <label>Evaluation Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Score__c</fullName>
        <label>Evaluation Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Start_Time__c</fullName>
        <label>Evaluation Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Time_Limit_Exceeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Time Limit Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Evaluation_Times_Taken__c</fullName>
        <label>Evaluation Times Taken</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Exempted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Activity_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that this assignment belongs to a Learning Activity</description>
        <inlineHelpText>This checkbox indicates that this assignment belongs to a Learning Activity</inlineHelpText>
        <label>Is Activity Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Test_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates that this assignment is created for preview purposes while creating new Learning objects</description>
        <inlineHelpText>This flag indicates that this assignment is created for preview purposes while creating new Learning objects</inlineHelpText>
        <label>Is Test Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Last_Published_Learning_Version_Decision__c</fullName>
        <label>Last Published Learning Version Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New version taken</fullName>
                </value>
                <value>
                    <fullName>Keep using old version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Last_Published_Learning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Published Learning Version</label>
        <referenceTo>redwing__Learning_Version__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Version</label>
        <referenceTo>redwing__Learning_Version__c</referenceTo>
        <relationshipLabel>Learning Assignments (Learning Version)</relationshipLabel>
        <relationshipName>Learning_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Previous_Version_Number__c</fullName>
        <label>Previous Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Previous_Version_Progress__c</fullName>
        <label>Previous Version Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Progress_Percentage__c</fullName>
        <label>Progress %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>redwing__Progress_Text__c</fullName>
        <formula>TEXT(redwing__Progress__c)</formula>
        <label>Progress Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Progress__c</fullName>
        <label>Progress</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Random_Quiz_Questions__c</fullName>
        <label>Random Quiz Questions</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Related_Learning_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Learning Object</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Archived Learning Assignments</relationshipLabel>
        <relationshipName>Archived_Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Shared_Learning_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared Learning Assignment</label>
        <referenceTo>redwing__Shared_Learning_Assignment__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Task_Rating__c</fullName>
        <label>Task Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Times_Launched__c</fullName>
        <inlineHelpText>Times the learning object linked to this assignment has been launched</inlineHelpText>
        <label>Times Launched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Avg_Task_Rating__c</fullName>
        <formula>redwing__Total_Task_Rating__c / IF( redwing__Total_Votes__c  != 0, redwing__Total_Votes__c , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Avg Task Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Task_Rating__c</fullName>
        <label>Total Task Rating</label>
        <summarizedField>redwing__Criterion_Rating__c.redwing__Score__c</summarizedField>
        <summaryFilterItems>
            <field>redwing__Criterion_Rating__c.redwing__Archived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>redwing__Criterion_Rating__c.redwing__Learning_Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Votes__c</fullName>
        <label>Total Votes</label>
        <summaryFilterItems>
            <field>redwing__Criterion_Rating__c.redwing__Score__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>redwing__Criterion_Rating__c.redwing__Archived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>redwing__Criterion_Rating__c.redwing__Learning_Assignment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Activity</label>
        <referenceTo>redwing__Training_Activity__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Section_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan Section Assignment</label>
        <referenceTo>redwing__Training_Plan_Section_Assignment__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Section_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan Section Item</label>
        <referenceTo>redwing__Training_Plan_Section_Item__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan Section</label>
        <referenceTo>redwing__Training_Plan_Section__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Assignments</relationshipLabel>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User_Notes__c</fullName>
        <label>User Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Learning_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Waitlist_Order__c</fullName>
        <label>Waitlist Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Learning Assignment</label>
    <listViews>
        <fullName>AE_New_Hire_Baseline_Assessment</fullName>
        <columns>redwing__User__c</columns>
        <columns>redwing__Training_Plan__c</columns>
        <columns>NAME</columns>
        <columns>redwing__Completed_On__c</columns>
        <columns>redwing__Evaluation_Result__c</columns>
        <columns>redwing__Evaluation_Score__c</columns>
        <columns>redwing__Progress_Percentage__c</columns>
        <columns>redwing__Progress__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>redwing__Training_Plan__c</field>
            <operation>equals</operation>
            <value>AE New Hire Baseline Assessment</value>
        </filters>
        <label>AE New Hire Baseline Assessment</label>
    </listViews>
    <listViews>
        <fullName>Administrator_Exam_Assignments_public</fullName>
        <columns>NAME</columns>
        <columns>redwing__Contact__c</columns>
        <columns>redwing__Evaluation_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>redwing__Learning__c</field>
            <operation>equals</operation>
            <value>Administrator Certification Test</value>
        </filters>
        <label>Administrator Exam Assignments</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Developer_Exam_Assignments_public</fullName>
        <columns>NAME</columns>
        <columns>redwing__Contact__c</columns>
        <columns>redwing__Evaluation_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>redwing__Learning__c</field>
            <operation>equals</operation>
            <value>Developer Certification Test</value>
        </filters>
        <label>Developer Exam Assignments</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>redwing__Learning__c</columns>
        <columns>redwing__Learning_Version__c</columns>
        <columns>redwing__Progress__c</columns>
        <columns>redwing__Progress_Percentage__c</columns>
        <columns>redwing__Last_Published_Learning_Version__c</columns>
        <columns>redwing__Last_Published_Learning_Version_Decision__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>redwing__My_Assignments</fullName>
        <columns>NAME</columns>
        <columns>redwing__User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>redwing__Learning__c</columns>
        <columns>redwing__Learning_Version__c</columns>
        <columns>redwing__Progress__c</columns>
        <columns>redwing__Progress_Percentage__c</columns>
        <columns>redwing__Last_Published_Learning_Version__c</columns>
        <columns>redwing__Last_Published_Learning_Version_Decision__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Assignments</label>
    </listViews>
    <listViews>
        <fullName>redwing__Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>redwing__User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>redwing__Learning__c</columns>
        <columns>redwing__Learning_Version__c</columns>
        <columns>redwing__Progress__c</columns>
        <columns>redwing__Progress_Percentage__c</columns>
        <columns>redwing__Last_Published_Learning_Version__c</columns>
        <columns>redwing__Last_Published_Learning_Version_Decision__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>redwing__Progress__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>Pending Approval</label>
    </listViews>
    <nameField>
        <displayFormat>LEA-{0000000}</displayFormat>
        <label>Learning Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>redwing__LMS_Approval_Sharing_ReadOnly__c</fullName>
        <label>LMS Approval Sharing (Read-Only)</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>redwing__LMS_Approval_Sharing__c</fullName>
        <label>LMS Approval Sharing</label>
    </sharingReasons>
</CustomObject>